--- a/BPMM_App/BPMM_App.Windows/BPMM_App.Windows.csproj
+++ b/BPMM_App/BPMM_App.Windows/BPMM_App.Windows.csproj
@@ -103,6 +103,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BPMM_Controls\Association.xaml.cs">
+      <DependentUpon>Association.xaml</DependentUpon>
+    </Compile>
     <Compile Include="BPMM_Controls\BPMMControl.xaml.cs">
       <DependentUpon>BPMMControl.xaml</DependentUpon>
     </Compile>
@@ -128,6 +131,10 @@
     <Content Include="Assets\StoreLogo.scale-100.png" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="BPMM_Controls\Association.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="BPMM_Controls\BPMMControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
