--- a/BPMM_App/BPMM_App.Windows/BPMM_App.Windows.csproj
+++ b/BPMM_App/BPMM_App.Windows/BPMM_App.Windows.csproj
@@ -110,6 +110,9 @@
       <DependentUpon>BPMMControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="BPMMObject.cs" />
+    <Compile Include="BPMM_Controls\InfluencerControl.xaml.cs">
+      <DependentUpon>InfluencerControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -136,6 +139,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="BPMM_Controls\BPMMControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="BPMM_Controls\InfluencerControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
