--- a/BPMM_App/BPMM_App.Windows/BPMM_App.Windows.csproj
+++ b/BPMM_App/BPMM_App.Windows/BPMM_App.Windows.csproj
@@ -104,8 +104,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BPMM_Controls\AssessmentControl.cs" />
-    <Compile Include="BPMM_Controls\Association.xaml.cs">
-      <DependentUpon>Association.xaml</DependentUpon>
+    <Compile Include="BPMM_Controls\Link.xaml.cs">
+      <DependentUpon>Link.xaml</DependentUpon>
     </Compile>
     <Compile Include="BPMM_Controls\BaseControl.cs" />
     <Compile Include="BPMM_Controls\BPMMControl.cs" />
@@ -136,7 +136,7 @@
     <Content Include="Assets\StoreLogo.scale-100.png" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="BPMM_Controls\Association.xaml">
+    <Page Include="BPMM_Controls\Link.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
